syntax = "proto3";

package calculator;

option go_package = "github.com/ftilie/go-grpc-servers/calculator/proto";

message AddRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message AddResponse {
    int32 result = 1;
}
